# bookstore_python

./: db.sqlite3  pyproject.toml
bookstore/: settings.py
order/: factories.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/: test_order.py  test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py  factories.py  urls.py
product/migrations/: 0001_initial.py  0002_rename_categories_product_category_and_more.py
product/models/: __init__.py  category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: admin.py  serializer.py  test_product.py  test_product_viewset.py  test_serializer.py
