[project]
name = "bookstore"
version = "0.1.0"
description = "description"
authors = [
    {name = "Arthur Faggundês",email = "arthurhfagundes6@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "pytest (>=9.1.1,<10.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "django (==5.1)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "django-extensions (>=4.1,<5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
